tests/fail/Assignments.java
package fail;

public class Assignments {

	public static void main(String[] args) {
		int x = 0;
		5 += 2;
		3 -= false;
		x /= true;
		10 *= 0.1;
		2 %= 1;
	}

}
